@@ -1,5 +1,4 @@
 Events mit Status eingesendet werden an Gast angezeigt
-Mailadressse Absender auf Gültigkeit prüfen
 Adminbereich: Liste der Anmeldungen wird immer auf 50 limitiert
 Als Veranstalter bei Änderungen der Anmeldung entscheiden, ob Teilnehmer per Mail verständigt wird bzw. Ändern der Anmeldung im Adminbereich funktioniert nicht
 
